<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Activity string -->
    <string name="app_name">BluetoothTouch</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving The application!</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected_to">Connected to:</string>
    <string name="button">Connect to a device first</string>

    <!-- IMU Fragment -->
    <string name="pitch">Pitch (x-axis rotation): </string>
    <string name="roll">Roll (y-axis ritation): </string>
    <string name="coefficient">Filter Coefficient: </string>
    <string name="sendingData">Now sending data</string>
    <string name="notSendingData">Hold to use tilt-control</string>

    <!-- Joystick Fragment -->
    <string name="defaultJoystickValue">x: 0 y: 0</string>

    <!-- Graph Fragment -->
    <string name="acc">Accelerometer</string>
    <string name="gyro">Gyro</string>
    <string name="kalman">Kalman filter</string>
    <string name="Qangle">Q<small><small>angle</small></small></string>
    <string name="Qbias">Q<small><small>bias</small></small></string>
    <string name="Rmeasure">R<small><small>measure</small></small></string>
    <string name="update">Update</string>

    <!-- PID Fragment -->
    <string name="Kp">P:</string>
    <string name="Ki">I:</string>
    <string name="Kd">D:</string>
    <string name="targetAngle">Target Angle:</string>
    <string name="currentValues">Current Values:</string>
    <string name="adjustValues">Adjust Values:</string>
    <string name="updateValues">Press to update PID values</string>

    <!-- Info Fragment -->
    <string name="name">Balanduino</string>
    <string name="manufacturer">by TKJ Electronics</string>
    <string name="appVersion">App version:</string>
    <string name="firmwareVersion">Firmware version:</string>
    <string name="eepromVersion">EEPROM version:</string>
    <string name="mcu">MCU:</string>
    <string name="batterylevel">Battery level:</string>
    <string name="runtime">Runtime:</string>

    <!-- Settings Dialog Fragment -->
    <string name="dialog_title">Settings</string>
    <string name="coefficientText">Adjust the ratio of trust between the phone\'s accelerometer (left) and gyro (right) when using the tilt-control.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="angleText">Adjust the maximum angle by using the slider below.</string>
    <string name="angle">Maximum angle:</string>
    <string name="turningText">Adjust the maximum turning value by using the slider below.</string>
    <string name="turning">Maximum turning value:</string>
    <string name="backToSpotText">Set whenever the robot should stay in the same spot by using the checkbox below.</string>
    <string name="backToSpot">Enable back to spot</string>
    <string name="uploadText">Press the button below to upload the newest firmware to the Balanduino via the USB host port.</string>
    <string name="uploadButtonText">Upload firmware</string>
    <string name="wiiText">Press the button below to pair with a Wiimote or a Wii U Pro Controller.</string>
    <string name="wiiButtonText">Pair with Wiimote</string>
    <string name="ps4Text">Press the button below to pair with a PS4 Controller.</string>
    <string name="ps4ButtonText">Pair with PS4 controller</string>
    <string name="restoreText">Press the button below to restore the default configuration values.</string>
    <string name="restoreButtonText">Restore values</string>

    <!-- Upload dialog -->
    <string name="uploadFirmware">Select your PCB revision below and then press OK to download the newest firmware and upload it to the Balanduino via the USB host port</string>
    <string name="rev12">Revision 1.2 or older</string>
    <string name="rev13">Revision 1.3</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect</string>
    <string name="settings">Settings</string>
</resources>