<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff33b5e5" />

        <TextView
            android:id="@+id/manufacturerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/manufacturer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/appVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manufacturerText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/appVersion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/appVersionText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/appVersionText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/firmwareVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appVersionText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/firmwareVersion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/firmwareVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/firmwareVersionText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/firmwareVersionText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/eepromVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firmwareVersionText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/eepromVersion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/eepromVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/eepromVersionText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/eepromVersionText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/mcuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eepromVersionText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/mcu"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mcu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/mcuText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/mcuText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/batterylevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mcuText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/batterylevel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/batterylevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/batterylevelText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/batterylevelText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/runtimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/batterylevelText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/runtime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/runtimeText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/runtimeText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <ToggleButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/runtimeText"
            android:layout_margin="@dimen/margin"
            android:text="@string/button"
            android:checked="true" />

    </RelativeLayout>

</ScrollView>