<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <xyz.pengzhihui.BluetoothTouch.SquareLinearLayout
            android:id="@+id/linegraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/acc" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox1"
                android:checked="true"
                android:text="@string/gyro" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox2"
                android:checked="true"
                android:text="@string/kalman" />

            <LinearLayout
                android:id="@+id/dummy"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rmeasure"
                android:layout_alignBaseline="@id/checkBox3"
                android:layout_toRightOf="@id/dummy"
                android:layout_marginLeft="@dimen/margin"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textView3"
                android:layout_toRightOf="@id/textView3"
                android:layout_marginLeft="@dimen/margin"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Qbias"
                android:layout_alignLeft="@id/textView3"
                android:layout_alignBaseline="@id/checkBox2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText3"
                android:layout_alignRight="@id/editText3"
                android:layout_alignBaseline="@id/textView2"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Qangle"
                android:layout_alignLeft="@id/textView3"
                android:layout_alignBaseline="@id/checkBox1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText3"
                android:layout_alignRight="@id/editText3"
                android:layout_alignBaseline="@id/textView1"
                android:inputType="numberDecimal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:checked="true" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/update" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>